<resources>
    <string name="app_name">Proyecto Belleza</string>
    <string name="title_activity_navigation">Navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation_menu">Cortes y Peinados</string>
    <string name="belleza">Cortes y peinados</string>

    <string name="mi_progreso">Mi progreso</string>
    <string name="autoevaluaciones">Autoevaluaciones</string>
    <string name="presentacion">Presentación</string>
    <string name="primeros_pasos">Primeros pasos</string>
    <string name="ubicaciones">Ubicaciones</string>
    <string name="registrarme">Registrarme</string>
    <string name="repetir_contrase_a">Repetir contraseña</string>
    <string name="contrase_a">Contraseña</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="_00000">00000</string>
    <string name="_0000">0000</string>
    <string name="dpi">DPI:</string>
    <string name="aa">aa</string>
    <string name="diagonal">/</string>
    <string name="desarrolladores"><u>Desarrolladores</u></string>
    <string name="mm">mm</string>
    <string name="dd">dd</string>
    <string name="nacimiento">Nacimiento:</string>
    <string name="guion">-</string>
    <string name="carn">Carné:</string>
    <string name="primer_nombre">Nombre</string>
    <string name="primer_apellido">Apellido</string>
    <string name="nombre_usuario">Nombre usuario</string>
    <string name="entrar">Entrar</string>
    <string name="olvidaste_tus_datos"><u>¿Olvidaste tus datos?</u></string>
    <string name="datos_incorrectos_ingrese_de_nuevo">Datos incorrectos, ingrese sus datos de nuevo</string>
    //PRIMEROS PASOS SERIE
    <string name="primeros_pasos_series">Antes de comenzar conozca los íconos del manual técnico de INTECAP</string>
    <string name="mapa_de_temas">Presenta de forma gráfica los temas y subtemas del manual.</string>
    <string name="glosario">Define palabras y términos de difícil comprensión o vocabulario nuevo.</string>
    <string name="planteo_solucion">Plantea problemas con el propósito de evaluar conocimientos previos en los participantes.</string>
    <string name="enlaces">Refiere a sitios en Internet que permiten ampliar información. Por la naturaleza cambiante de los sitios en Internet las direcciones pueden variar.</string>
    <string name="tematico">Indica el inicio del contenido de un bloque temático.</string>
    <string name="me_evaluo">Plantea evaluaciones y autoevaluaciones al final de cada unidad, bloque temático o sesión.</string>
    <string name="aplico">Aparece al final de un contenido y presenta actividades y tareas para que ponga a prueba lo que se ha aprendido</string>
    <string name="anexo">Presenta datos y documentos adicionales de apoyo para la comprensión del contenido del manual.</string>
    <string name="autoformacion">Aparece al final de un contenido y presenta actividades y tareas para que ponga a prueba lo que se ha aprendido y debe realizarse fuera del aula.</string>
    <string name="bibliografia">Detalla libros, manuales, periódicos, etcétera, que han sido consultados para desarrollar los contenidos del manual.</string>
    <string name="autoevaluacion1"><u>Autoevaluación 1</u></string>
    <string name="creditoLema">Aplicación desarrollada por los participantes de la carrera de \"DESARROLLADOR DE APLICACIONES MOVILES EN ANDROID\", del centro Tic"'"s. \nGuatemala, 2016</string>


    <string name="corte_dama">"Primero debemos reunir los materiales adecuados: 1 Consigue un buen par de tijeras de peluquero. Si decides cortarte el cabello por tu cuenta, debes buscar tijeras de buena calidad especialmente diseñadas para cortar cabello. Puedes encontrarlas en línea o en las tiendas de suministros para salones de belleza. Usar tijeras de buena calidad hará que sea más fácil cortarte el cabello en casa.Debes buscar tijeras de peluquero que tengan una cuchilla de acero inoxidable y una cuchilla afilada. No utilices tijeras de cocina, tijeras para uso doméstico o tijeras de jardinería, ya que podrían arrancarte o dañarte el cabello.2 Compra una maquinilla para cortar cabello y una rasuradora para cabello. Puedes encontrarlas en línea o en una tienda de suministros para salones de belleza. Consigue maquinillas eléctricas de buena calidad, ya que vas a usar estas herramientas para hacer el corte bob.Una rasuradora para cabello también será útil para hacer este corte, ya que te permitirá dar forma y recortar el cabello sin tener que hacer ningún corte mayor. Asegúrate de que la rasuradora esté afilada, puesto que una cuchilla sin filo hará que sea más difícil de usar.3 Consigue un peine y bandas elásticas para cabello. También necesitarás un peine y tres bandas elásticas. Puedes encontrar estos productos en línea o en el pasillo de artículos de belleza de cualquier farmacia local. El peine te ayudará a separar el cabello en secciones iguales para hacer el corte. Las bandas mantendrán las secciones de cabello separadas mientras cortas."</string>
    <string name="corte_caballero">1 Pregúntale a la persona cómo quiere su cabello. Averigua qué tan corto quiere que sea su cabello, qué tan uniforme quiere que sea el corte y cómo planea peinarse después. Es posible que tan solo quiera que le cortes las puntas abiertas o tal vez que solo cortes la parte de atrás y dejes la parte de arriba larga. También es posible que quiera que le cortes todo el cabello. Antes de comenzar a cortar, es importante que entiendas qué es lo que él quiere que le hagan a su cabello. Si las cosas están claras y se comunican desde el inicio, evitarás cualquier posible malentendido. Al cortar el cabello de un hombre, divídelo en 7 partes: la parte superior, el lado izquierdo, lado derecho, la parte trasera, zona de la patilla izquierda, zona de la patilla derecha y el flequillo. De esa manera, él te podrá describir cuánto cabello quiere que le cortes de cada parte. Tengan un diálogo. A medida que le cortes el cabello, continúa pidiéndole su opinión sobre el corte. Deja que se mire en un espejo (en la pared o en la mano) para que pueda revisar el corte y de vez en cuando pregúntale si está lo suficientemente corto. Elige un corte que quede bien con la cara de la persona y la cantidad de cabello que tiene en la cabeza. Es posible que a un hombre que está perdiendo cabello en la parte superior de la cabeza le guste como se ve Don Draper, pero se decepcionará si intenta tener el mismo estilo de cabello. Los peinados más drásticos en los hombres tienden a funcionar mejor cuando este tiene toda la cabeza llena de cabello. Los peinados más conservadores tienden a quedar mejor cuando no hay mucho cabello.</string>
    <string name="corte_niño">1 Lava el cabello del niño. 2 Consigue una silla para sentar al niño. 3 Coloca una toalla alrededor de los hombros para que te asegures que no entre cabello dentro. Si eso pasa, el niño sentirá picor y estará moviéndose y hará que metas la pata. 4Mantén su cabeza lo mas derecho posible. 5 Empieza a cortar por la parte de abajo del cabello para igualarlo. 6 Corta la parte superior del cabello, la herramienta para hacer esto está determinada por el largo que se prefiera. Para cortes cortos, ve los cortes cortos. Para cortes largos, usa tijeras y ve los cortes largos.</string>
    <string name="corte_niña">1 Lava y seca con una toalla el cabello. Cepilla todo el cabello. 2 Divide el pelo a la mitad y pon el pelo que seleccionaste fuera de tu alcance con un broche. 3 Utiliza un peine de dientes finos con un extremo puntiagudo, separa el pelo detrás de las orejas y utiliza un broche para mantener las dos secciones de las orejas para arriba. 4 Utiliza el peine, separa el cabello húmedo 1pulgada de la linea del cuello. Corta el cabello arriba de esta sección. 5 Toma una pequeña parte de cabello, sujétalo firmemente entre tus dedos mirando al piso, y córtalo en pequeños cortes estando segura de que el largo es correcto.</string>

    <string-array name="años">
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="informacion_de_tema_1">Informacion de cortes para damas</string>
    <string name="informacion_de_tema_2">Informacion de cortes para hombres</string>
    <string name="informacion_de_tema_3">Informacion de corte para niño</string>
    <string name="informacion_de_tema_4">Informacion de corte para niña</string>
    <string name="info">La información contenida dentro de la aplicación la puede encontrar en los siguientes links</string>
    <string name="instructor"><u>Instructor</u></string>

</resources>
